--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,26 +3,28 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
-    "axios": "^1.6.2",
-    "react-query": "^3.39.3",
     "@aws-amplify/ui-react": "^6.0.0",
     "aws-amplify": "^6.0.0",
-    "recharts": "^2.10.3",
-    "react-i18next": "^13.5.0",
+    "axios": "^1.6.2",
     "i18next": "^23.7.8",
-    "tailwindcss": "^3.3.6",
-    "lucide-react": "^0.294.0"
+    "lucide-react": "^0.294.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-i18next": "^13.5.0",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.20.0",
+    "recharts": "^2.10.3",
+    "tailwindcss": "^3.3.6"
   },
   "devDependencies": {
-    "@testing-library/react": "^14.1.2",
     "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
     "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.0.7",
+    "autoprefixer": "^10.4.24",
     "eslint": "^8.55.0",
-    "prettier": "^3.1.1"
+    "postcss": "^8.5.6",
+    "prettier": "^3.1.1",
+    "vite": "^5.0.7"
   },
   "scripts": {
     "dev": "vite",
